@@ -1193,6 +1193,17 @@ class UnicodeTest(
         self.assertRaises(MemoryError, alloc)
         self.assertRaises(MemoryError, alloc)
 
+    def test_format_subclass(self):
+        class U(unicode):
+            def __str__(self):
+                return '__str__ overridden'
+            def __unicode__(self):
+                return u'__unicode__ overridden'
+        u = U(u'xxx')
+        self.assertEquals("%s" % u, u'__unicode__ overridden')
+        self.assertEquals("{}".format(u), u'__unicode__ overridden')
+
+
 def test_main():
     test_support.run_unittest(__name__)
 
