@@ -12,6 +12,8 @@ What's New in Python 2.7 beta 1?
 Core and Builtins
 -----------------
 
+- Issue #1583863: An unicode subclass can now override the __str__ method
+
 - Issue #6474: Make error message from passing an inadequate number of keyword
   arguments to a function correct.
 
